refactor: replace trim().isEmpty() with isBlank() for better readability